# preflight

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_hf.jsonl  sample_together.jsonl
experiments/: dpo_validation.ipynb
preflight/: cli.py  coverage.py  dedup.py  embeddings.py  judge.py  length.py  loader.py  recommend.py  report.py
tests/: test_cli.py  test_coverage.py  test_dedup.py  test_embeddings.py  test_judge.py  test_length.py  test_loader.py  test_recommend.py  test_report.py
