[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "preflight"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "numpy",
    "tqdm",
    "scikit-learn",
]

[project.optional-dependencies]
judge = ["openai>=1.0"]

[project.scripts]
preflight = "preflight.cli:main"
