[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "preflight"
version = "0.1.0"
description = "Profile DPO preference datasets before training. Detects length bias, low-contrast pairs, duplicates, coverage gaps, and more."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "sentence-transformers",
    "numpy",
    "tqdm",
    "scikit-learn",
]

[project.optional-dependencies]
judge = ["openai>=1.0"]
dev = ["pytest"]

[project.scripts]
preflight = "preflight.cli:main"
